route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-openshift
spec:
  to:
    kind: Service
    name: hello-openshift
    weight: 100
  wildcardPolicy: None
